fixed navbar and landing page spacing

--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -44,7 +44,7 @@
     display: flex;
     align-items: center;
     gap: 2rem;
-    justify-content: space-between;
+    justify-content:space-evenly;
     width: 75%;
 }
 
